<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pozadina"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/bg_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>


    <TextView
            android:id="@+id/id_post_label"
            android:text="@string/obican_post"
            android:textColor="@color/colorPost"
            android:textSize="22sp"
            android:fontFamily="@font/customfont"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/novi_datum_label"
            android:text="@string/novi_datum"
            android:textColor="@color/colorNoviDatum"
            android:textSize="22sp"
            android:fontFamily="@font/customfont"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/id_post_label"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/id_novidatum"
            android:text="@string/novidatum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/novi_datum_label"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/customfont"
            android:textStyle="italic"
            android:textColor="@color/colorPost"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>
    <ImageView
            android:id="@+id/id_ikona"
            android:layout_width="145dp"
            android:layout_height="198dp"
            app:srcCompat="@drawable/ik_101"
            android:contentDescription="@string/ikona_svetitelja"
            app:layout_constraintTop_toBottomOf="@id/id_novidatum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:id="@+id/id_svetitelj_text_view"
            android:text="@string/svetitelj"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:lines="3"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorSvetitelj"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/id_ikona"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/customfont"/>
    <TextView
            android:id="@+id/stari_datum_label"
            android:text="@string/stari_datum"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/id_svetitelj_text_view"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorPost"
            android:textAlignment="center"
            android:textSize="22sp"
            android:fontFamily="@font/customfont"
            android:textStyle="italic"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>
    <TextView
            android:id="@+id/id_staridatum"
            android:text="@string/staridatum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/stari_datum_label"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            android:fontFamily="@font/customfont"
            android:textColor="@color/colorPost"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>

    <LinearLayout
            android:id="@+id/id_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/id_staridatum"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:background="@drawable/horizontallayer">

        <ImageButton
                android:id="@+id/id_kalendar_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fb_1"
                android:layout_margin="5dp"
                android:background="@drawable/btnshape"/>
        <ImageButton
                android:id="@+id/id_molitve_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fb_2"
                android:layout_margin="5dp"
                android:background="@drawable/btnshape"/>
        <!--
        <ImageButton
                android:id="@+id/id_share_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fb_convert"
                android:layout_margin="5dp"
                android:background="@drawable/btnshape"/>
        -->
        <ImageButton
                android:id="@+id/id_katihizis_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fb_3"
                android:layout_margin="5dp"
                android:background="@drawable/btnshape"/>
        <ImageButton
                android:id="@+id/id_info_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fb_4"
                android:layout_margin="5dp"
                android:background="@drawable/btnshape"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>